[gd_scene load_steps=17 format=2]

[ext_resource path="res://wb_theme.tres" type="Theme" id=1]
[ext_resource path="res://main_screen.gd" type="Script" id=2]
[ext_resource path="res://Assets/photos/classroom-824120_1920.jpg" type="Texture" id=3]
[ext_resource path="res://NameChangePanel.gd" type="Script" id=4]
[ext_resource path="res://Assets/fonts/noto_sans_display.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/fonts/noto_sans_display_bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ObservationWindow.gd" type="Script" id=7]
[ext_resource path="res://EditScreen.gd" type="Script" id=8]
[ext_resource path="res://Results.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.952941, 0.933333, 0.847059, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
shadow_offset = Vector2( 0, 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )

[node name="AppWindow" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ClassroomPhoto" type="Sprite" parent="."]
position = Vector2( 639.9, 201.694 )
scale = Vector2( 0.665729, 0.665729 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="StartScreen" type="CanvasLayer" parent="."]

[node name="InstructionPanel" type="Panel" parent="StartScreen"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -171.0
margin_right = 640.0
margin_bottom = 359.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MinuteBox" type="HBoxContainer" parent="StartScreen/InstructionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -159.0
margin_right = 53.5
margin_bottom = -119.0

[node name="MinuteMinus" type="Button" parent="StartScreen/InstructionPanel/MinuteBox"]
margin_right = 43.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "-"
__meta__ = {
"_edit_lock_": true
}

[node name="MinuteLabel" type="Label" parent="StartScreen/InstructionPanel/MinuteBox"]
margin_left = 47.0
margin_top = 3.0
margin_right = 60.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "1"
__meta__ = {
"_edit_lock_": true
}

[node name="MinutePlus" type="Button" parent="StartScreen/InstructionPanel/MinuteBox"]
margin_left = 64.0
margin_right = 107.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "+"
__meta__ = {
"_edit_lock_": true
}

[node name="CurrentTime" type="Label" parent="StartScreen/InstructionPanel"]
unique_name_in_owner = true
margin_left = 1200.0
margin_top = 510.0
margin_right = 1279.0
margin_bottom = 533.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "99:99"
align = 2

[node name="MinuteExplanation" type="Label" parent="StartScreen/InstructionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -322.5
margin_top = -197.0
margin_right = 322.5
margin_bottom = -163.0
theme = ExtResource( 1 )
text = "How long will you observe? (in minutes)"
align = 1

[node name="ObservationItemsTitle" type="Label" parent="StartScreen/InstructionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -97.0
margin_right = 102.5
margin_bottom = -63.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 5 )
text = "Observation Items"

[node name="Title" type="Label" parent="StartScreen/InstructionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.5
margin_top = -250.0
margin_right = 172.5
margin_bottom = -200.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Time Sampling Form"
align = 1

[node name="BottomButtons" type="HBoxContainer" parent="StartScreen/InstructionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = 180.0
margin_right = 500.0
margin_bottom = 240.0

[node name="Manual" type="Button" parent="StartScreen/InstructionPanel/BottomButtons"]
margin_right = 247.0
margin_bottom = 60.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Manual"

[node name="ChangeItems" type="Button" parent="StartScreen/InstructionPanel/BottomButtons"]
margin_left = 251.0
margin_right = 498.0
margin_bottom = 60.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Edit Items"

[node name="PupilName" type="Button" parent="StartScreen/InstructionPanel/BottomButtons"]
margin_left = 502.0
margin_right = 749.0
margin_bottom = 60.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Edit Names"

[node name="Start" type="Button" parent="StartScreen/InstructionPanel/BottomButtons"]
margin_left = 753.0
margin_right = 1000.0
margin_bottom = 60.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Start"

[node name="GridObservations" type="GridContainer" parent="StartScreen/InstructionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -589.0
margin_top = -57.0
margin_right = 603.0
margin_bottom = 167.0
columns = 3

[node name="AcronymLabel" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 34.0
theme = ExtResource( 1 )
text = "Acronym"
__meta__ = {
"_edit_lock_": true
}

[node name="DescriptorLabel" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_right = 218.0
margin_bottom = 34.0
theme = ExtResource( 1 )
text = "Descriptor"
__meta__ = {
"_edit_lock_": true
}

[node name="ExplanationLabel" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 222.0
margin_right = 1088.0
margin_bottom = 34.0
theme = ExtResource( 1 )
text = "Explanation"
__meta__ = {
"_edit_lock_": true
}

[node name="1Acronym" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_top = 38.0
margin_right = 96.0
margin_bottom = 72.0
theme = ExtResource( 1 )
text = "OnT"
__meta__ = {
"_edit_lock_": true
}

[node name="1Item" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 38.0
margin_right = 218.0
margin_bottom = 72.0
theme = ExtResource( 1 )
text = "On Task"
__meta__ = {
"_edit_lock_": true
}

[node name="1Explanation" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 222.0
margin_top = 38.0
margin_right = 1088.0
margin_bottom = 72.0
theme = ExtResource( 1 )
text = "The pupil is on task"
__meta__ = {
"_edit_lock_": true
}

[node name="2Acronym" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_top = 76.0
margin_right = 96.0
margin_bottom = 110.0
theme = ExtResource( 1 )
text = "Loo"
__meta__ = {
"_edit_lock_": true
}

[node name="2Item" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 76.0
margin_right = 218.0
margin_bottom = 110.0
theme = ExtResource( 1 )
text = "Looking"
__meta__ = {
"_edit_lock_": true
}

[node name="2Explanation" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 222.0
margin_top = 76.0
margin_right = 1088.0
margin_bottom = 110.0
theme = ExtResource( 1 )
text = " The pupil is looking around in a distracted manner or is staring into the distance"
__meta__ = {
"_edit_lock_": true
}

[node name="3Acronym" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_top = 114.0
margin_right = 96.0
margin_bottom = 148.0
theme = ExtResource( 1 )
text = "Dis"
__meta__ = {
"_edit_lock_": true
}

[node name="3Item" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 114.0
margin_right = 218.0
margin_bottom = 148.0
theme = ExtResource( 1 )
text = "Distracting"
__meta__ = {
"_edit_lock_": true
}

[node name="3Explanation" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 222.0
margin_top = 114.0
margin_right = 1088.0
margin_bottom = 148.0
theme = ExtResource( 1 )
text = "The pupil is distracting other pupils or talking to them"
__meta__ = {
"_edit_lock_": true
}

[node name="4Acronym" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_top = 152.0
margin_right = 96.0
margin_bottom = 186.0
theme = ExtResource( 1 )
text = "Wal"
__meta__ = {
"_edit_lock_": true
}

[node name="4Item" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 152.0
margin_right = 218.0
margin_bottom = 186.0
theme = ExtResource( 1 )
text = "Walking"
__meta__ = {
"_edit_lock_": true
}

[node name="4Explanation" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 222.0
margin_top = 152.0
margin_right = 1088.0
margin_bottom = 186.0
theme = ExtResource( 1 )
text = "The pupil is walking through the class"
__meta__ = {
"_edit_lock_": true
}

[node name="5Acronym" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_top = 190.0
margin_right = 96.0
margin_bottom = 224.0
theme = ExtResource( 1 )
text = "Oth"
__meta__ = {
"_edit_lock_": true
}

[node name="5Item" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 190.0
margin_right = 218.0
margin_bottom = 224.0
theme = ExtResource( 1 )
text = "Other"
__meta__ = {
"_edit_lock_": true
}

[node name="5Explanation" type="Label" parent="StartScreen/InstructionPanel/GridObservations"]
unique_name_in_owner = true
margin_left = 222.0
margin_top = 190.0
margin_right = 1088.0
margin_bottom = 224.0
theme = ExtResource( 1 )
text = "The pupil is otherwise distracted and not on task"
__meta__ = {
"_edit_lock_": true
}

[node name="NameChangePanel" type="Panel" parent="StartScreen"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -171.0
margin_right = 640.0
margin_bottom = 359.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="NameContainer" type="VBoxContainer" parent="StartScreen/NameChangePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -269.0
margin_top = -210.0
margin_right = 270.0
margin_bottom = 237.0

[node name="ObservedNameLabel" type="Label" parent="StartScreen/NameChangePanel/NameContainer"]
unique_name_in_owner = true
margin_right = 539.0
margin_bottom = 34.0
theme = ExtResource( 1 )
text = "Observed Individual First Name:"

[node name="WarningLabel" type="Label" parent="StartScreen/NameChangePanel/NameContainer"]
unique_name_in_owner = true
margin_top = 38.0
margin_right = 539.0
margin_bottom = 72.0
theme = ExtResource( 1 )
text = "You must complete all fields below!"

[node name="NameLine" type="LineEdit" parent="StartScreen/NameChangePanel/NameContainer"]
unique_name_in_owner = true
margin_top = 76.0
margin_right = 539.0
margin_bottom = 110.0
theme = ExtResource( 1 )

[node name="ObserverName" type="Label" parent="StartScreen/NameChangePanel/NameContainer"]
unique_name_in_owner = true
margin_top = 114.0
margin_right = 539.0
margin_bottom = 148.0
theme = ExtResource( 1 )
text = "Your Full Name:"

[node name="ObserverLine" type="LineEdit" parent="StartScreen/NameChangePanel/NameContainer"]
unique_name_in_owner = true
margin_top = 152.0
margin_right = 539.0
margin_bottom = 186.0
theme = ExtResource( 1 )

[node name="ObserverName2" type="Label" parent="StartScreen/NameChangePanel/NameContainer"]
unique_name_in_owner = true
margin_top = 190.0
margin_right = 539.0
margin_bottom = 224.0
theme = ExtResource( 1 )
text = "Observed during which Activity/Lesson:"

[node name="ObservedActivity" type="LineEdit" parent="StartScreen/NameChangePanel/NameContainer"]
unique_name_in_owner = true
margin_top = 228.0
margin_right = 539.0
margin_bottom = 262.0
theme = ExtResource( 1 )

[node name="OkButton" type="Button" parent="StartScreen/NameChangePanel/NameContainer"]
margin_top = 266.0
margin_right = 539.0
margin_bottom = 300.0
theme = ExtResource( 1 )
text = "OK"

[node name="EditScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="EditScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="GridObservations" type="GridContainer" parent="EditScreen/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -518.5
margin_top = -57.0
margin_right = 518.5
margin_bottom = 129.0
columns = 3

[node name="AcronymLabel" type="Label" parent="EditScreen/Panel/GridObservations"]
margin_right = 96.0
margin_bottom = 34.0
text = "Acronym"

[node name="AcronymLabel2" type="Label" parent="EditScreen/Panel/GridObservations"]
margin_left = 100.0
margin_right = 244.0
margin_bottom = 34.0
text = "Descriptor"

[node name="AcronymLabel3" type="Label" parent="EditScreen/Panel/GridObservations"]
margin_left = 248.0
margin_right = 1037.0
margin_bottom = 34.0
text = "Explanation"

[node name="1AcronymE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_top = 38.0
margin_right = 96.0
margin_bottom = 72.0
theme = ExtResource( 1 )
text = "O"
max_length = 3
__meta__ = {
"_edit_lock_": true
}

[node name="1ItemE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 38.0
margin_right = 244.0
margin_bottom = 72.0
theme = ExtResource( 1 )
text = "On Task"
expand_to_text_length = true
__meta__ = {
"_edit_lock_": true
}

[node name="1ExplanationE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_left = 248.0
margin_top = 38.0
margin_right = 1037.0
margin_bottom = 72.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "The pupil is on task"
__meta__ = {
"_edit_lock_": true
}

[node name="2AcronymE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_top = 76.0
margin_right = 96.0
margin_bottom = 110.0
theme = ExtResource( 1 )
text = "L"
max_length = 3
expand_to_text_length = true
__meta__ = {
"_edit_lock_": true
}

[node name="2ItemE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 76.0
margin_right = 244.0
margin_bottom = 110.0
theme = ExtResource( 1 )
text = "Looking"
expand_to_text_length = true
__meta__ = {
"_edit_lock_": true
}

[node name="2ExplanationE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_left = 248.0
margin_top = 76.0
margin_right = 1037.0
margin_bottom = 110.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = " The pupil is looking around in a distracted manner or is staring into the distance"
__meta__ = {
"_edit_lock_": true
}

[node name="3AcronymE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_top = 114.0
margin_right = 96.0
margin_bottom = 148.0
theme = ExtResource( 1 )
text = "D"
max_length = 3
expand_to_text_length = true
__meta__ = {
"_edit_lock_": true
}

[node name="3ItemE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 114.0
margin_right = 244.0
margin_bottom = 148.0
theme = ExtResource( 1 )
text = "Distracting"
expand_to_text_length = true
__meta__ = {
"_edit_lock_": true
}

[node name="3ExplanationE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_left = 248.0
margin_top = 114.0
margin_right = 1037.0
margin_bottom = 148.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "The pupil is distracting other pupils or talking to them"
__meta__ = {
"_edit_lock_": true
}

[node name="4AcronymE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_top = 152.0
margin_right = 96.0
margin_bottom = 186.0
theme = ExtResource( 1 )
text = "W"
max_length = 3
__meta__ = {
"_edit_lock_": true
}

[node name="4ItemE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 152.0
margin_right = 244.0
margin_bottom = 186.0
theme = ExtResource( 1 )
text = "Walking"
expand_to_text_length = true
__meta__ = {
"_edit_lock_": true
}

[node name="4ExplanationE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_left = 248.0
margin_top = 152.0
margin_right = 1037.0
margin_bottom = 186.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "The pupil is walking through the class"
__meta__ = {
"_edit_lock_": true
}

[node name="5AcronymE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_top = 190.0
margin_right = 96.0
margin_bottom = 224.0
theme = ExtResource( 1 )
text = "O"
max_length = 3
__meta__ = {
"_edit_lock_": true
}

[node name="5ItemE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 190.0
margin_right = 244.0
margin_bottom = 224.0
theme = ExtResource( 1 )
text = "Other"
expand_to_text_length = true
__meta__ = {
"_edit_lock_": true
}

[node name="5ExplanationE" type="LineEdit" parent="EditScreen/Panel/GridObservations"]
unique_name_in_owner = true
margin_left = 248.0
margin_top = 190.0
margin_right = 1037.0
margin_bottom = 224.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "The pupil is otherwise distracted and not on task"
__meta__ = {
"_edit_lock_": true
}

[node name="CancelButton" type="Button" parent="EditScreen/Panel"]
margin_left = 520.0
margin_top = 645.0
margin_right = 597.0
margin_bottom = 679.0
text = "Cancel"

[node name="OKButton" type="Button" parent="EditScreen/Panel"]
margin_left = 616.0
margin_top = 645.0
margin_right = 656.0
margin_bottom = 679.0
text = "OK"

[node name="ClearAll" type="Button" parent="EditScreen/Panel"]
margin_left = 952.0
margin_top = 615.0
margin_right = 1051.0
margin_bottom = 649.0
text = "Clear All"

[node name="ObservationWindow" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="ObservationWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 188.0
margin_bottom = 1.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 7 )

[node name="BehaviourButtons" type="HBoxContainer" parent="ObservationWindow/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -453.0
margin_top = 144.0
margin_right = 453.0
margin_bottom = 184.0

[node name="BehaviourOne" type="Button" parent="ObservationWindow/Panel/BehaviourButtons"]
unique_name_in_owner = true
margin_right = 178.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Acronym1"

[node name="BehaviourTwo" type="Button" parent="ObservationWindow/Panel/BehaviourButtons"]
unique_name_in_owner = true
margin_left = 182.0
margin_right = 360.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Acronym1"

[node name="BehaviourThree" type="Button" parent="ObservationWindow/Panel/BehaviourButtons"]
unique_name_in_owner = true
margin_left = 364.0
margin_right = 542.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Acronym1"

[node name="BehaviourFour" type="Button" parent="ObservationWindow/Panel/BehaviourButtons"]
unique_name_in_owner = true
margin_left = 546.0
margin_right = 724.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Acronym1"

[node name="BehaviourFive" type="Button" parent="ObservationWindow/Panel/BehaviourButtons"]
unique_name_in_owner = true
margin_left = 728.0
margin_right = 906.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Acronym1"

[node name="TimeRemaining" type="Label" parent="ObservationWindow/Panel"]
margin_left = 532.0
margin_top = 98.0
margin_right = 572.0
margin_bottom = 132.0
theme = ExtResource( 1 )
text = "20"

[node name="DescriptorTime" type="Label" parent="ObservationWindow/Panel"]
margin_left = 581.0
margin_top = 98.0
margin_right = 784.0
margin_bottom = 132.0
theme = ExtResource( 1 )
text = "Seconds remaining"

[node name="ObservationsRemaining" type="Label" parent="ObservationWindow/Panel"]
unique_name_in_owner = true
margin_left = 438.0
margin_top = 472.0
margin_right = 553.0
margin_bottom = 506.0
theme = ExtResource( 1 )
text = "Remaining"

[node name="Button" type="Button" parent="ObservationWindow/Panel"]
margin_left = 1179.0
margin_top = 29.0
margin_right = 1246.0
margin_bottom = 63.0
text = "Abort"

[node name="TwentySecondTimer" type="Timer" parent="ObservationWindow"]
unique_name_in_owner = true
wait_time = 20.0

[node name="ObservationsTotal" type="Label" parent="ObservationWindow"]
unique_name_in_owner = true
margin_left = 723.0
margin_top = 660.0
margin_right = 920.0
margin_bottom = 694.0
theme = ExtResource( 1 )
text = "ObservationsTotal"

[node name="Results" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 9 )

[node name="Panel" type="Panel" parent="Results"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -157.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="SaveReport" type="Button" parent="Results/Panel"]
margin_left = 1045.0
margin_top = 835.0
margin_right = 1274.0
margin_bottom = 869.0
text = "Save Report as PNG"

[node name="BackMainMenu" type="Button" parent="Results/Panel"]
margin_left = 14.0
margin_top = 828.0
margin_right = 158.0
margin_bottom = 862.0
text = "Restart"

[node name="MainText" type="Label" parent="Results/Panel"]
margin_left = 11.0
margin_top = 11.0
margin_right = 1268.0
margin_bottom = 163.0
text = "Can this be multi-line?
Or does text-wrap work?
Can I get integers in? Must be able to, concatenate."
autowrap = true

[node name="Obs1" type="Label" parent="Results/Panel"]
margin_left = 31.0
margin_top = 277.0
margin_right = 71.0
margin_bottom = 311.0
text = "Observation 1: "

[node name="Obs1Text" type="Label" parent="Results/Panel"]
unique_name_in_owner = true
margin_left = 199.0
margin_top = 278.0
margin_right = 361.0
margin_bottom = 312.0
text = "Observation 1: "

[connection signal="pressed" from="StartScreen/InstructionPanel/MinuteBox/MinuteMinus" to="." method="_on_MinuteMinus_pressed"]
[connection signal="pressed" from="StartScreen/InstructionPanel/MinuteBox/MinutePlus" to="." method="_on_MinutePlus_pressed"]
[connection signal="pressed" from="StartScreen/InstructionPanel/BottomButtons/Manual" to="." method="_on_Manual_pressed"]
[connection signal="pressed" from="StartScreen/InstructionPanel/BottomButtons/ChangeItems" to="." method="_on_ChangeItems_pressed"]
[connection signal="pressed" from="StartScreen/InstructionPanel/BottomButtons/PupilName" to="." method="_on_PupilName_pressed"]
[connection signal="pressed" from="StartScreen/InstructionPanel/BottomButtons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="StartScreen/NameChangePanel/NameContainer/OkButton" to="StartScreen/NameChangePanel" method="_on_OkButton_pressed"]
[connection signal="pressed" from="EditScreen/Panel/CancelButton" to="EditScreen" method="_on_CancelButton_pressed"]
[connection signal="pressed" from="EditScreen/Panel/OKButton" to="EditScreen" method="_on_OKButton_pressed"]
[connection signal="pressed" from="EditScreen/Panel/ClearAll" to="EditScreen" method="_on_ClearAll_pressed"]
[connection signal="pressed" from="ObservationWindow/Panel/BehaviourButtons/BehaviourOne" to="ObservationWindow" method="_on_BehaviourOne_pressed"]
[connection signal="pressed" from="ObservationWindow/Panel/BehaviourButtons/BehaviourTwo" to="ObservationWindow" method="_on_BehaviourTwo_pressed"]
[connection signal="pressed" from="ObservationWindow/Panel/BehaviourButtons/BehaviourThree" to="ObservationWindow" method="_on_BehaviourThree_pressed"]
[connection signal="pressed" from="ObservationWindow/Panel/BehaviourButtons/BehaviourFour" to="ObservationWindow" method="_on_BehaviourFour_pressed"]
[connection signal="pressed" from="ObservationWindow/Panel/BehaviourButtons/BehaviourFive" to="ObservationWindow" method="_on_BehaviourFive_pressed"]
[connection signal="pressed" from="ObservationWindow/Panel/Button" to="ObservationWindow" method="_on_Button_pressed"]
[connection signal="timeout" from="ObservationWindow/TwentySecondTimer" to="ObservationWindow" method="_on_TwentySecondTimer_timeout"]
[connection signal="visibility_changed" from="Results" to="Results" method="_on_Results_visibility_changed"]
[connection signal="pressed" from="Results/Panel/SaveReport" to="Results" method="_on_SaveReport_pressed"]
[connection signal="pressed" from="Results/Panel/BackMainMenu" to="Results" method="_on_BackMainMenu_pressed"]
